# NovoMolGen

./: AGENTS.md  gantry_moses.sh  pyproject.toml  run_moses.py
configs/: finetune_PMO_ZINC_1B_bpe_smiles_llama-32M.yaml
configs/finetune/: augment_hc_trainer_pmo_157M_SMILES_AtomWise.yaml  augment_hc_trainer_pmo_157M_SMILES_BPE.yaml.yaml  augment_hc_trainer_pmo_300M_SMILES_AtomWise.yaml  augment_hc_trainer_pmo_300M_SMILES_BPE.yaml  augment_hc_trainer_pmo_32M_SMILES_BPE.yaml  reinvent_trainer_pmo.yaml
scripts/: eval_molecules_json.py  launch_all_tasks.sh  run_gantry.sh  run_gantry_eval.sh
src/: main.py  utils.py
src/callbacks/: wandb.py
src/data_loader/: molecule_data_module.py  molecule_tokenizer.py  utils.py
src/eval/: molecule_evaluation.py  utils.py
src/eval/components/: moses.py
src/models/: __init__.py  modeling_novomolgen.py  modeling_utils.py
src/trainer/: hf_trainer.py  policy_trainer.py  reinvent_trainer.py  utils.py
